Optimize Dockerfile and Portainer deployment setup
Refactored Dockerfile to use multi-stage builds for better separation of build and production dependencies, and improved reproducibility with npm ci. Added Portainer deployment and troubleshooting guides. Updated package.json build script to compile TypeScript before Payload build. Modified portainer-stack.yml to enable Dockerfile builds. Updated tsconfig.json to include Node types for better compatibility.

--- a/photography-cms/portainer-stack.yml
+++ b/photography-cms/portainer-stack.yml
@@ -24,6 +24,9 @@ services:
       - "com.photography.service=database"
 
   cms:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: photography-cms:latest
     container_name: photography-cms
     restart: unless-stopped
