--- a/photography-cms/Dockerfile
+++ b/photography-cms/Dockerfile
@@ -1,3 +1,27 @@
+# Build stage
+FROM node:18-alpine AS builder
+
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install ALL dependencies (including dev dependencies for build)
+RUN npm ci
+
+# Copy TypeScript config and source files
+COPY tsconfig.json ./
+COPY nodemon.json ./
+COPY src ./src
+
+# Set dummy environment variable for build (Payload may need this)
+ENV PAYLOAD_SECRET=build-time-secret-key-change-in-production
+ENV NODE_ENV=production
+
+# Build the application (TypeScript compile + Payload build)
+RUN npm run build
+
+# Production stage
 FROM node:18-alpine
 
 WORKDIR /app
@@ -5,24 +29,21 @@ WORKDIR /app
 # Copy package files
 COPY package*.json ./
 
-# Install ALL dependencies (production + dev needed for Payload)
-RUN npm install
+# Install only production dependencies
+RUN npm ci --only=production
 
-# Copy source files
-COPY . .
+# Copy built files from builder stage
+COPY --from=builder /app/dist ./dist
 
-# Build the application
-RUN npm run build
-
-# Remove dev dependencies after build
-RUN npm prune --production
+# Create media directory
+RUN mkdir -p ./media
 
 # Expose port
 EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
+  CMD node -e "require('http').get('http://localhost:3000/admin', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start the application
 CMD ["npm", "run", "serve"]
