--- a/photography-cms/tsconfig.json
+++ b/photography-cms/tsconfig.json
@@ -13,6 +13,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "baseUrl": "./src",
+    "types": ["node"],
     "paths": {
       "@/*": ["./*"]
     }
