--- a/photography-cms/package.json
+++ b/photography-cms/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build": "tsc",
-    "serve": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
+    "serve": "cross-env NODE_ENV=production node dist/server.js",
     "generate:types": "payload generate:types",
     "migrate": "node scripts/migrate.js"
   },
