--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,18 +56,13 @@ services:
       - "traefik.http.services.photography-cms.loadbalancer.server.port=3000"
 
   frontend:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
     container_name: photography-frontend
     restart: unless-stopped
     ports:
       - "${FRONTEND_PORT:-8080}:80"
-    volumes:
-      - ./index.html:/usr/share/nginx/html/index.html:ro
-      - ./script.js:/usr/share/nginx/html/script.js:ro
-      - ./styles.css:/usr/share/nginx/html/styles.css:ro
-      - ./api.js:/usr/share/nginx/html/api.js:ro
-      - ./data:/usr/share/nginx/html/data:ro
-      - ./favicons:/usr/share/nginx/html/favicons:ro
     networks:
       - photography-network
     depends_on:
