--- a/photography-cms/package.json
+++ b/photography-cms/package.json
@@ -3,30 +3,35 @@
   "version": "1.0.0",
   "description": "Payload CMS for Photography Portfolio",
   "type": "module",
-  "main": "dist/server.js",
   "scripts": {
-    "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
-    "build": "tsc",
-    "serve": "node dist/server.js",
+    "dev": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next dev",
+    "build": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next build",
+    "start": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next start",
     "generate:types": "payload generate:types",
-    "migrate": "node scripts/migrate.js"
+    "migrate": "payload migrate"
   },
   "dependencies": {
     "@payloadcms/db-mongodb": "^3.0.0",
+    "@payloadcms/next": "^3.0.0",
     "@payloadcms/richtext-lexical": "^3.0.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "payload": "^3.0.0"
+    "next": "15.0.3",
+    "payload": "^3.0.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "sharp": "0.33.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
