--- a/photography-cms/package.json
+++ b/photography-cms/package.json
@@ -16,8 +16,8 @@
     "@payloadcms/richtext-lexical": "^3.0.0",
     "next": "15.0.3",
     "payload": "^3.0.0",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "sharp": "0.33.5"
   },
   "devDependencies": {
