--- a/photography-cms/Dockerfile
+++ b/photography-cms/Dockerfile
@@ -10,9 +10,16 @@ RUN npm install --legacy-peer-deps
 FROM node:18-alpine AS builder
 WORKDIR /app
 
-# Copy dependencies
+# Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
-COPY . .
+
+# Copy all source files needed for build
+COPY package*.json ./
+COPY tsconfig.json ./
+COPY next.config.mjs ./
+COPY app ./app
+COPY src ./src
+COPY public ./public
 
 # Set build-time environment variables
 ENV NEXT_TELEMETRY_DISABLED=1
