--- a/photography-cms/package.json
+++ b/photography-cms/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next dev",
-    "build": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next build",
+    "build": "next build",
+    "build:cross-env": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next build",
     "start": "cross-env NODE_OPTIONS=\"${NODE_OPTIONS} --no-deprecation\" next start",
     "generate:types": "payload generate:types",
     "migrate": "payload migrate"
