--- a/photography-cms/package.json
+++ b/photography-cms/package.json
@@ -15,6 +15,7 @@
     "@payloadcms/db-mongodb": "^3.0.0",
     "@payloadcms/next": "^3.0.0",
     "@payloadcms/richtext-lexical": "^3.0.0",
+    "graphql": "^16.12.0",
     "next": "15.0.3",
     "payload": "^3.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
